--- a/public/styles.css
+++ b/public/styles.css
@@ -634,6 +634,11 @@ Ensure the default browser behavior of the `hidden` attribute.
           text-decoration-line: underline;
 }
 
+.line-through {
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -927,44 +932,44 @@ Ensure the default browser behavior of the `hidden` attribute.
 								linear-gradient(to bottom, black 50%, transparent 0), 
 								linear-gradient(to right, black 50%, transparent 0), 
 								linear-gradient(to bottom, black 50%, transparent 0);
-  background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+  background-position: 0 0, 100% 0, 0% 100%, 0 0%;
   background-size: 30px 1px, 1px 30px, 30px 1px, 1px 30px;
   background-repeat: repeat-x, repeat-y, repeat-x, repeat-y;
 }
 
 @-webkit-keyframes moving-lines{
   0%{
-    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+    background-position: 0 0, 100% 0, 0% 100%, 0 0%;
   }
 
   100%{
-    background-position: 99% 0, 100% 178%, 1% 100%, 0 -78%;
+    background-position: 30px 0, 100% 30px, -30px 100%, 0 -30px;
   }
 }
 
 @keyframes moving-lines{
   0%{
-    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+    background-position: 0 0, 100% 0, 0% 100%, 0 0%;
   }
 
   100%{
-    background-position: 99% 0, 100% 178%, 1% 100%, 0 -78%;
+    background-position: 30px 0, 100% 30px, -30px 100%, 0 -30px;
   }
 }
 
-#sixth-section {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+#sixth-section--div {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
   background-image: repeating-linear-gradient(-74deg,rgba(0,0,0,.2),rgba(0,0,0,.2) 1px,transparent 0,transparent 4px),repeating-linear-gradient(-74deg,rgba(0,0,0,.2),rgba(0,0,0,.2) 1px,transparent 0,transparent 4px);
   background-position: 0 0,0 100%;
   background-size: 100% 12px,100% 12px;
+  background-repeat: repeat-x,repeat-x,repeat-y,repeat-y;
 }
 
 #sixth-section--vendor {
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1.25rem;
   text-align: center;
   font-family: ogg, Helvetica, sans-serif;
   font-size: 1.5rem;
@@ -973,4 +978,103 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .sixth-section--vendor-link {
   margin-bottom: 0px;
+}
+
+#footer {
+  position: relative;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.footer--reach-us {
+  margin-bottom: 1.875rem;
+  text-align: center;
+  background-image: linear-gradient(to right, black 50%, transparent 0), 
+								linear-gradient(to bottom, black 50%, transparent 0), 
+								linear-gradient(to right, black 50%, transparent 0), 
+								linear-gradient(to bottom, black 50%, transparent 0);
+  background-position: 0 0, 100% 0, 0% 100%, 0 0%;
+  background-size: 30px 1px, 1px 30px, 30px 1px, 1px 30px;
+  background-repeat: repeat-x, repeat-y, repeat-x, repeat-y;
+}
+
+.footer--reach-us-icon {
+  padding-top: 1.875rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.footer--reach-us .preformatted {
+  margin-bottom: 0px;
+  padding-bottom: 1.875rem;
+  text-align: center;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.footer--email {
+  margin-top: 3.75rem;
+}
+
+.footer--bottom-divs {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-family: apercu, Helvetica, sans-serif;
+  font-size: 0.625rem;
+}
+
+.footer--link {
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.footer--input-email {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem;
+  display: flex;
+  width: 83.333333%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+input[type="email"]::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+  opacity: 1;
+}
+
+input[type="email"]:-ms-input-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+  opacity: 1;
+}
+
+input[type="email"]::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+  opacity: 1;
+}
+
+input[type="email"]:focus {
+  border-width: 0px;
+  outline-width: 0px;
+}
+
+.footer--input-email-enter-btn {
+  cursor: pointer;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
