--- a/src/styles.css
+++ b/src/styles.css
@@ -171,32 +171,72 @@
 								linear-gradient(to bottom, black 50%, transparent 0), 
 								linear-gradient(to right, black 50%, transparent 0), 
 								linear-gradient(to bottom, black 50%, transparent 0);
-	background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+	background-position: 0 0, 100% 0, 0% 100%, 0 0%;
 	background-size: 30px 1px, 1px 30px, 30px 1px, 1px 30px;
-	background-repeat: repeat-x, repeat-y, repeat-x, repeat-y;
-}
+	background-repeat: repeat-x, repeat-y, repeat-x, repeat-y;}
 
 @keyframes moving-lines{
 	0%{
-		background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+		background-position: 0 0, 100% 0, 0% 100%, 0 0%;
 	}
 
 	100%{
-		background-position: 99% 0, 100% 178%, 1% 100%, 0 -78%;
+		background-position: 30px 0, 100% 30px, -30px 100%, 0 -30px;
 	}
 }
 
-#sixth-section{
-	@apply py-8;
+#sixth-section--div{
+	@apply py-10;
 	background-image: repeating-linear-gradient(-74deg,rgba(0,0,0,.2),rgba(0,0,0,.2) 1px,transparent 0,transparent 4px),repeating-linear-gradient(-74deg,rgba(0,0,0,.2),rgba(0,0,0,.2) 1px,transparent 0,transparent 4px);
     background-position: 0 0,0 100%;
     background-size: 100% 12px,100% 12px;
+    background-repeat: repeat-x,repeat-x,repeat-y,repeat-y;
 }
 
 #sixth-section--vendor{
-	@apply text-2xl font-ogg px-4 text-center py-8;
+	@apply text-2xl font-ogg px-4 text-center pb-5;
 }
 
 .sixth-section--vendor-link{
 	@apply  mb-0;
+}
+
+#footer{
+	@apply py-16 relative
+}
+
+.footer--reach-us{
+	@apply text-center moving-lines mb-[1.875rem]
+}
+
+.footer--reach-us-icon{
+	@apply pt-[1.875rem] pb-2 text-3xl
+}
+
+.footer--reach-us .preformatted{
+	@apply text-center pb-[1.875rem] text-sm mb-0
+}
+
+.footer--email{
+	@apply mt-[3.75rem]
+}
+
+.footer--bottom-divs{
+	@apply font-apercu text-[0.625rem] flex flex-row items-center justify-between
+}
+
+.footer--link{
+	@apply border-b border-black
+}
+
+.footer--input-email{
+	@apply border border-black px-6 py-4 w-5/6 mt-4 mx-auto flex flex-row justify-between items-center
+}
+
+input[type="email"]{
+	@apply placeholder:text-black placeholder:opacity-100 focus:border-0 focus:outline-0
+}
+
+.footer--input-email-enter-btn{
+	@apply text-xl cursor-pointer
 }
