--- a/public/styles.css
+++ b/public/styles.css
@@ -943,12 +943,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1.5rem;
 }
 
-/*py-0 mx-[1.875rem]*/
-
 .third-section--headers {
-  margin-left: auto;
-  margin-right: auto;
-  width: 300px;
+  margin-left: 2rem;
+  margin-right: 2rem;
   text-align: center;
   font-family: ogg, Helvetica, sans-serif;
   font-size: 3.75rem;
@@ -967,9 +964,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .double-dash {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  margin-left: auto;
-  margin-right: auto;
-  width: 300px;
+  margin-left: 2rem;
+  margin-right: 2rem;
   text-align: center;
 }
 
